--- a/0x00-Webpack/task_0/package.json
+++ b/0x00-Webpack/task_0/package.json
@@ -9,13 +9,13 @@
     "build": "webpack --mode production"
   },
   "keywords": [],
-  "author": "Igebu Chris",
+  "author": "Igebu Christopher",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "jquery": "^3.7.1"
+    "jquery": "^3.6.0"
   }
 }
