--- a/0x01-react_intro/task_4/dashboard/package.json
+++ b/0x01-react_intro/task_4/dashboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashboard",
-  "homepage": "http://KSI5.github.io/alx-react",
+  "homepage": "https://KSI5.github.io/alx-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-17-updated": "^1.0.2",
+    "enzyme-adapter-react-16": "^1.15.7",
     "gh-pages": "^3.2.3",
     "react-scripts": "^5.0.1"
   }
