--- a/0x01-react_intro/task_4/dashboard/package.json
+++ b/0x01-react_intro/task_4/dashboard/package.json
@@ -39,9 +39,6 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.10",
-    "gh-pages": "^3.2.3",
-    "react-scripts": "^5.0.1"
+    "gh-pages": "^4.0.0"
   }
 }
